data/derived/sp14/progs/unify/prog0527.ml.out
Characters 125-140:
  else additivePersAndRoot((digits theSum) (pers + 1));;
                           ^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
